Newsfeed: fixed misalignement of h1 in question_detail.html

--- a/newco/apps/items/static/css/content.css
+++ b/newco/apps/items/static/css/content.css
@@ -22,6 +22,7 @@
   font-size: 130%;
   font-weight: bold;
   line-height: 140%;
+  margin-top: 0px;
 }
 
 .answer-content .content {
